--- a/Algo/linear/Test.ipynb
+++ b/Algo/linear/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "source": [
     "import matplotlib.pyplot as plt\r\n",
     "import numpy as np\r\n",
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "source": [
     "# diabetes_x = diabetes.data[:,np.newaxis,0]\r\n",
     "diabetes_x = diabetes.data\r\n",
@@ -185,14 +185,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 21
     }
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "source": [
     "diabetes_x_train = diabetes_x[:30]\r\n",
     "diabetes_x_test = diabetes_x[30:60]"
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "source": [
     "diabetes_y_train = diabetes.target[:30]\r\n",
     "diabetes_y_test = diabetes.target[30:60]"
@@ -212,37 +212,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "source": [
     "model= linear_model.LinearRegression()\r\n",
     "model.fit(diabetes_x_train, diabetes_y_train)\r\n",
-    "diabetes_y_predicted = model.predict(diabetes_x_test)\r\n",
-    "diabetes_y_predicted"
+    "diabetes_y_predicted = model.predict(diabetes_x_test)"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([114.46196154, 123.54475857, 114.30793836, 117.83514605,\n",
-       "        98.1793212 , 157.98462625, 225.86828434, 168.23389573,\n",
-       "       212.11459225, 168.60533664,  94.73003861,  99.93046882,\n",
-       "       159.4922099 ,  40.89671529, 182.72986479, 145.74801364,\n",
-       "       186.58419436, 178.3207628 ,  70.06380012, 196.84844558,\n",
-       "       102.9708146 , 147.28443827, 114.67444838,  57.56322601,\n",
-       "        81.03090873,  51.91639119, 197.31047617, 119.50307364,\n",
-       "       161.37004509, 168.43547772])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 12
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "source": [
     "print(\"mean_squared_error : \", mean_squared_error(diabetes_y_test, diabetes_y_predicted))"
    ],
@@ -259,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "source": [
     "print(\"coef = \", model.coef_)\r\n",
     "print(\"intercept = \", model.intercept_)"
@@ -279,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "source": [
     "# plt.scatter(diabetes_x_test, diabetes_y_test)\r\n",
     "# plt.plot(diabetes_x_test, diabetes_y_predicted)\r\n",
